Fix collapsing image on Safari

--- a/src/assets/scss/components/_portfolio-item.scss
+++ b/src/assets/scss/components/_portfolio-item.scss
@@ -26,6 +26,9 @@
         background-size: contain;
         background-repeat: no-repeat;
 
+        position: absolute !important;
+        left: 0;
+        top: 0;
         overflow: hidden;
     }
 
